--- a/HQproj-master/app/src/main/res/values/strings.xml
+++ b/HQproj-master/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
-    <string name="app_name">HQproj</string>
+    <string name="app_name">HQ音乐小项目</string>
+    <string name="lan_chinese">I am Chinese</string>
+    <string name="lan_en">我是老外</string>
+    <string name="PageLogin_content">欢迎使用</string>
+    <string name="PageLogin_userName">用户名</string>
+    <string name="PageLogin_userPwd">密码</string>
+    <string name="PageLogin_login">登陆</string>
+    <string name="PageLogin_register">注册</string>
+    <string name="PageLogin_forget">忘了密码？</string>
+    <string name="PageLogin_type">点击这里！</string>
+    <string name="PageLogin_choose_lan">切换语言</string>
+
+    <string name="PageRes_content">注册</string>
+    <string name="PageRes_userName">用户名</string>
+    <string name="PageRes_userPwd">密码</string>
+    <string name="PageRes_userConfirmPwd">确认密码</string>
+    <string name="PageRes_register">注册</string>
 </resources>
+
+
+
